[tool.poetry]
name = "pytest-schedule"
version = "0.1.0"
description = "A pytest job scheduling for humans."
authors = ["Alpaca00 <o.matskiv@temabit.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
dpath = "^2.1.3"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
